#-------------------------------------------------------------------------------
# This file is part of the CMake build system for Tiny3D
#
# The contents of this file are placed in the public domain. 
# Feel free to make use of it in any way you like.
#-------------------------------------------------------------------------------


option (protobuf_BUILD_LITE_LIBRARIES "Build protobuf-lite library" ON)

add_subdirectory(cmake)

